--- a/src/styles/Details.css
+++ b/src/styles/Details.css
@@ -1,5 +1,6 @@
 .details-cont {
-  padding: 10px;
+  padding: 0 5px 0 10px;
+  height: calc(100vh - 19rem);
   overflow: auto;
 }
 
@@ -10,7 +11,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
   font-size: 16px;
   font-weight: 600;
 }
@@ -29,4 +30,26 @@
 
 .details-dark {
   background-color: rgba(0, 0, 0, 0.05);
+}
+
+@media (max-width: 600px) {
+  .details-cont {
+    height: 300px;
+  }
+
+  .coins-title {
+    width: calc(100% - 40px);
+    font-size: 14px;
+    font-weight: 500;
+  }
+
+  .details-cont li {
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 380px) {
+  .details-cont li {
+    font-size: 12px;
+  }
 }
